# ATHENA

./: .gitignore  ATHENA.md  LICENSE  README.md  apollo.py  artemis.py  athena.py  ceo_athena_bridge.py  demo_integration.py  discord_bot_fixed.py  distributed.py  full_system_demo.py  github_scout.py  models.py  plutus-pod-containerfile  pyproject.toml  requirements.txt
_legacy/: apollo.py  ares.py  distributed.py  hephaestus.py  hermes.py  model_manager.py
athena/: __init__.py  commander.py  core.py  gates.py  orchestration.py  types.py
athena/agents/: code_integrator.py  github_scout.py
athena/fleet/: __init__.py  delegation_policy.py  mesh_discovery.py  model_router.py  models.py  node_registry.py  pod_coordinator.py
athena/interfaces/: alexandria_auto_runner.py  alexandria_pipeline.py  arandur_node.py  ceo_bridge.py  discord_bot.py
athena/memory/: __init__.py  core_client.py  local_client.py
athena/olympians/: __init__.py  apollo.py  ares.py  artemis.py  base.py  hephaestus.py  hermes.py
docs/: LAY_OF_LAND.md
docs/notes/: ATHENA_PROGRESS.md  (+7 more)
olympians/: base.py
scripts/: alexandria_auto_cycle.sh  alexandria_ceo_dispatch.sh  alexandria_ceo_pods.sh  alexandria_ceo_status.sh  preflight_check.sh  remote_cutover_main_pc.sh  restart_and_check_discord_bot.sh  smoke_ready_check.sh  start_discord_bot.sh  sync_to_main_pc.sh
tests/: conftest.py  test_alexandria_auto_runner.py  test_alexandria_pipeline.py  test_arandur_node.py  test_ceo_bridge.py  test_core.py  test_fleet.py  test_hermes_deep_crawl.py  test_mesh_delegation.py  test_olympians.py  test_types.py
(+13 files in other folders)
